server/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-api
spec:
  selector:
    matchLabels:
      app: node-api
  template:
    metadata:
      labels:
        app: node-api
    spec:
      containers:
        - name: nodeservice
          image: jomin729/nodeservice
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
      restartPolicy: Always
