server/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
  - host: ec2-3-83-241-86.compute-1.amazonaws.com
    http:
      paths:
      - path: /notificationApi
        pathType: Prefix
        backend:
          service:
            name: notification-api
            port:
              number: 3000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: node-api
            port:
              number: 8000
      - path: /socket.io
        pathType: Prefix
        backend:
          service:
            name: node-api
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: angular-client
            port:
              number: 80
